// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`functional:lib/Command > errors > should error on conflicting option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/conflicting-option",
  "message": "Option(-j | --json) cannot be used with Option(-m | --markdown)",
  "additional": [],
  "cause": {
    "conflict": "json",
    "option": "markdown",
  },
  "command": {
    "command": "info",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "markdown": "cli",
    },
    "opts": {
      "markdown": true,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "json": true,
      "markdown": true,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on conflicting option (1) 1`] = `
{
  "code": 1,
  "id": "kronk/conflicting-option",
  "message": "Option(-j | --json) cannot be used with Option(-m | --markdown)",
  "additional": [],
  "cause": {
    "conflict": "json",
    "option": "markdown",
  },
  "command": {
    "command": "info",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "markdown": "cli",
    },
    "opts": {
      "markdown": true,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "json": true,
      "markdown": true,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on conflicting option (2) 1`] = `
{
  "code": 1,
  "id": "kronk/conflicting-option",
  "message": "Option(-y | --yaml) cannot be used with Option(-m | --markdown)",
  "additional": [],
  "cause": {
    "conflict": "yaml",
    "option": "markdown",
  },
  "command": {
    "command": "info",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "yaml": "cli",
      "markdown": "cli",
    },
    "opts": {
      "yaml": true,
      "markdown": true,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "yaml": true,
      "markdown": true,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (0) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Option(--watch) does not allow an argument",
  "additional": [],
  "cause": {
    "argument": "server.mts",
  },
  "command": {
    "command": "bun",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "dnsResultOrder": "default",
      "elideLines": "default",
    },
    "opts": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
    },
    "optsWithGlobals": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (1) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "command": {
    "command": "run",
    "ancestors": [
      "bun",
    ],
    "args": [],
    "argv": [
      "server.mts",
      "main.mts",
    ],
    "optionValueSources": {
      "extensionOrder": "default",
    },
    "opts": {
      "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    },
    "optsWithGlobals": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
      "hot": true,
      "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (2) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [
      "0",
      "1",
    ],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (3) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [
      "-1",
      "1",
    ],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (4) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Option(-w | --write) does not allow an argument",
  "additional": [],
  "cause": {
    "argument": "1",
  },
  "command": {
    "command": "grease",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "config": "default",
      "level": "default",
      "tagPrefix": "default",
      "write": "default",
    },
    "opts": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (5) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`0\` arguments, but got \`4\`",
  "additional": [],
  "command": {
    "command": "pack",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [
      "CHANGELOG.md",
      "LICENSE.md",
      "README.md",
      "dist",
    ],
    "optionValueSources": {
      "gzipLevel": "default",
    },
    "opts": {
      "gzipLevel": 9,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "gzipLevel": 9,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (6) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`0\` arguments, but got \`1\`",
  "additional": [],
  "command": {
    "command": "list",
    "ancestors": [
      "tag",
      "grease",
    ],
    "args": [],
    "argv": [
      "fab255b",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "sort": "-creatordate",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (7) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`3\` arguments, but got \`4\`",
  "additional": [],
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [
      "0",
      "1",
      "2",
      "3",
    ],
    "optionValueSources": {
      "n": "cli",
    },
    "opts": {
      "n": "3",
    },
    "optsWithGlobals": {
      "n": "3",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (0) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(--shell <sh>) does not allow 'node'",
  "additional": [
    "Choices: 'bun' and 'system'",
  ],
  "cause": {
    "choice": "node",
    "choices": [
      "bun",
      "system",
    ],
  },
  "command": {
    "command": "bun",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "dnsResultOrder": "default",
      "elideLines": "default",
    },
    "opts": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
    },
    "optsWithGlobals": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (1) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(-d | --debug [choice]) does not allow 'f'",
  "additional": [
    "Choices: '0', '1', 'false', 'n', 'true', and 'y'",
  ],
  "cause": {
    "choice": "f",
    "choices": [
      "0",
      "1",
      "false",
      "n",
      "true",
      "y",
    ],
  },
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (2) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(--gzip-level <level>) does not allow '-1'",
  "additional": [
    "Choices: '0', '1', '2', '3', '4', '5', '6', '7', '8', and '9'",
  ],
  "cause": {
    "choice": "-1",
    "choices": [
      "0",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    ],
  },
  "command": {
    "command": "pack",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "gzipLevel": "default",
    },
    "opts": {
      "gzipLevel": 9,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "gzipLevel": 9,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (3) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(-n\\t<!>) does not allow '13'",
  "additional": [
    "Choices: '1', '2', '3', '4', '5', '6', '7', '8', and '9'",
  ],
  "cause": {
    "choice": "13",
    "choices": [
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    ],
  },
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (4) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Argument(<a>) does not allow 'a'",
  "additional": [
    "Choices: '0', '1', '2', '3', '4', '5', '6', '7', '8', and '9'",
  ],
  "cause": {
    "choice": "a",
    "choices": [
      "0",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    ],
  },
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [
      "a",
      "0",
      "1",
    ],
    "optionValueSources": {
      "n": "cli",
    },
    "opts": {
      "n": "1",
    },
    "optsWithGlobals": {
      "n": "1",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (0) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<>'",
  "additional": [],
  "command": {
    "command": "run",
    "ancestors": [
      "bun",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "extensionOrder": "default",
    },
    "opts": {
      "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    },
    "optsWithGlobals": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
      "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (1) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Option(--elide-lines <num>) requires an argument",
  "additional": [],
  "command": {
    "command": "bun",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "dnsResultOrder": "default",
      "elideLines": "default",
    },
    "opts": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
    },
    "optsWithGlobals": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (2) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<n>'",
  "additional": [],
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (3) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Option(-M | --max <n>) requires an argument",
  "additional": [],
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (4) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<tag>'",
  "additional": [],
  "command": {
    "command": "create",
    "ancestors": [
      "tag",
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "message": "default",
      "object": "default",
      "remote": "default",
      "sign": "default",
    },
    "opts": {
      "message": "",
      "object": "HEAD",
      "remote": "origin",
      "sign": false,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "sort": "-creatordate",
      "message": "",
      "object": "HEAD",
      "remote": "origin",
      "sign": false,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (5) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Option(-s, --separator <char>) requires an argument",
  "additional": [],
  "command": {
    "command": "string-util",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "separator": "default",
    },
    "opts": {
      "separator": ",",
    },
    "optsWithGlobals": {
      "separator": ",",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (6) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<c>'",
  "additional": [],
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [
      "3",
      "9",
    ],
    "optionValueSources": {
      "n": "cli",
    },
    "opts": {
      "n": "3",
    },
    "optsWithGlobals": {
      "n": "3",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing mandatory option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-mandatory-option",
  "message": "Option(-p | --parent <!>) is required",
  "additional": [],
  "command": {
    "command": "resolve",
    "ancestors": [
      "mlly",
    ],
    "args": [],
    "argv": [
      "#lib/command",
    ],
    "optionValueSources": {
      "conditions": "default",
      "preserveSymlinks": "default",
    },
    "opts": {
      "conditions": Set {
        "node",
        "import",
      },
      "preserveSymlinks": false,
    },
    "optsWithGlobals": {
      "debug": false,
      "conditions": Set {
        "node",
        "import",
      },
      "preserveSymlinks": false,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '--debug'",
  "additional": [],
  "cause": {
    "flag": "--debug",
  },
  "command": {
    "command": "average",
    "ancestors": [],
    "args": [],
    "argv": [
      "--debug",
      "--debug",
      "--",
      "13",
      "26",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (1) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '--import'",
  "additional": [],
  "cause": {
    "flag": "--import",
  },
  "command": {
    "command": "run",
    "ancestors": [
      "bun",
    ],
    "args": [],
    "argv": [
      "run.mts",
      "--import",
      "./loader.mjs",
    ],
    "optionValueSources": {
      "extensionOrder": "default",
    },
    "opts": {
      "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    },
    "optsWithGlobals": {
      "dnsResultOrder": "verbatim",
      "elideLines": 10,
      "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (2) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '--list'",
  "additional": [],
  "cause": {
    "flag": "--list",
  },
  "command": {
    "command": "tag",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [
      "--list",
    ],
    "optionValueSources": {
      "sort": "default",
    },
    "opts": {
      "sort": "-creatordate",
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
      "sort": "-creatordate",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (3) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '-m'",
  "additional": [],
  "cause": {
    "flag": "-m",
  },
  "command": {
    "command": "grease",
    "ancestors": [],
    "args": [],
    "argv": [
      "-m",
      "info",
      "-y",
    ],
    "optionValueSources": {
      "config": "default",
      "level": "default",
      "tagPrefix": "default",
      "write": "default",
    },
    "opts": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
    },
    "optsWithGlobals": {
      "config": true,
      "level": "info",
      "tagPrefix": "",
      "write": false,
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (4) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '-m'",
  "additional": [],
  "cause": {
    "flag": "-m",
  },
  "command": {
    "command": "resolve",
    "ancestors": [
      "mlly",
    ],
    "args": [],
    "argv": [
      "a.mts",
      "-m",
      "main",
    ],
    "optionValueSources": {
      "conditions": "default",
      "preserveSymlinks": "default",
    },
    "opts": {
      "conditions": Set {
        "node",
        "import",
      },
      "preserveSymlinks": false,
    },
    "optsWithGlobals": {
      "debug": false,
      "parent": "file://\${process.cwd()}",
      "conditions": Set {
        "node",
        "import",
      },
      "preserveSymlinks": false,
    },
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (0) 1`] = `
{
  "command": "average",
  "ancestors": [],
  "args": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
}
`;

exports[`functional:lib/Command > parsing > should run command (1) 1`] = `
{
  "command": "average",
  "ancestors": [],
  "args": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
}
`;

exports[`functional:lib/Command > parsing > should run command (2) 1`] = `
{
  "command": "average",
  "ancestors": [],
  "args": [
    "3",
    "4",
    "5",
  ],
  "argv": [
    "3",
    "4",
    "5",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
}
`;

exports[`functional:lib/Command > parsing > should run command (3) 1`] = `
{
  "command": "average",
  "ancestors": [],
  "args": [
    "3",
    "6",
    "9",
  ],
  "argv": [
    "3",
    "6",
    "9",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
}
`;

exports[`functional:lib/Command > parsing > should run command (4) 1`] = `
{
  "command": "init",
  "ancestors": [
    "bun",
  ],
  "args": [
    "packages/types",
  ],
  "argv": [
    "packages/types",
  ],
  "optionValueSources": {
    "yes": "cli",
    "minimal": "cli",
  },
  "opts": {
    "yes": true,
    "minimal": true,
  },
  "optsWithGlobals": {
    "dnsResultOrder": "verbatim",
    "elideLines": 10,
    "cwd": "\${process.cwd()}",
    "yes": true,
    "minimal": true,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (5) 1`] = `
{
  "command": "run",
  "ancestors": [
    "bun",
  ],
  "args": [
    "src/main.mts",
  ],
  "argv": [
    "src/main.mts",
  ],
  "optionValueSources": {
    "extensionOrder": "default",
    "tsconfigOverride": "cli",
  },
  "opts": {
    "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    "tsconfigOverride": "tsconfig.prod.json",
  },
  "optsWithGlobals": {
    "dnsResultOrder": "verbatim",
    "elideLines": 10,
    "cwd": "\${process.cwd()}",
    "extensionOrder": "tsx,.ts,.jsx,.js,.json",
    "tsconfigOverride": "tsconfig.prod.json",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (6) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    -13,
  ],
  "argv": [
    "-13",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "cli",
  },
  "opts": {
    "max": 3,
    "min": -1,
  },
  "optsWithGlobals": {
    "max": 3,
    "min": -1,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (7) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    9,
  ],
  "argv": [
    "9",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "default",
  },
  "opts": {
    "max": 26,
    "min": 0,
  },
  "optsWithGlobals": {
    "max": 26,
    "min": 0,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (8) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    1,
  ],
  "argv": [
    "1",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "cli",
  },
  "opts": {
    "max": 26,
    "min": 13,
  },
  "optsWithGlobals": {
    "max": 26,
    "min": 13,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (9) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    3,
  ],
  "argv": [
    "3",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "cli",
  },
  "opts": {
    "max": 13,
    "min": 0,
  },
  "optsWithGlobals": {
    "max": 13,
    "min": 0,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (10) 1`] = `
{
  "command": "grease",
  "ancestors": [],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "config": "default",
    "level": "default",
    "tagPrefix": "default",
    "write": "default",
    "color": "env",
    "cwd": "env",
  },
  "opts": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "color": true,
    "cwd": "\${process.cwd()}",
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "color": true,
    "cwd": "\${process.cwd()}",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (11) 1`] = `
{
  "command": "grease",
  "ancestors": [],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "config": "default",
    "level": "default",
    "tagPrefix": "default",
    "write": "default",
    "help": "cli",
    "color": "env",
    "cwd": "env",
  },
  "opts": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "help": true,
    "color": true,
    "cwd": "\${process.cwd()}",
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "help": true,
    "color": true,
    "cwd": "\${process.cwd()}",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (12) 1`] = `
{
  "command": "bump",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "prestart": "default",
    "help": "cli",
  },
  "opts": {
    "prestart": 1,
    "help": true,
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "color": true,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
    "help": true,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (13) 1`] = `
{
  "command": "grease",
  "ancestors": [],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "config": "default",
    "level": "default",
    "tagPrefix": "default",
    "write": "default",
    "unstable": "cli",
    "version": "cli",
    "color": "env",
    "cwd": "env",
  },
  "opts": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "unstable": true,
    "version": "3.0.0-alpha.10",
    "color": true,
    "cwd": "\${process.cwd()}",
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "unstable": true,
    "version": "3.0.0-alpha.10",
    "color": true,
    "cwd": "\${process.cwd()}",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (14) 1`] = `
{
  "command": "recommend",
  "ancestors": [
    "bump",
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "json": true,
    "unstable": true,
    "color": true,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
    "preid": "alpha",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (15) 1`] = `
{
  "command": "changelog",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "releases": "cli",
    "samefile": "default",
    "to": "cli",
  },
  "opts": {
    "releases": 0,
    "samefile": false,
    "to": "$(jq .version package.json -r)",
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": true,
    "color": true,
    "cwd": "\${process.cwd()}",
    "releases": 0,
    "samefile": false,
    "to": "$(jq .version package.json -r)",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (16) 1`] = `
{
  "command": "changelog",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "releases": "default",
    "samefile": "default",
    "to": "default",
    "outfile": "cli",
  },
  "opts": {
    "releases": 1,
    "samefile": false,
    "to": "HEAD",
    "outfile": "$NOTES_FILE",
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": true,
    "color": true,
    "cwd": "\${process.cwd()}",
    "releases": 1,
    "samefile": false,
    "to": "HEAD",
    "outfile": "$NOTES_FILE",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (17) 1`] = `
{
  "command": "pack",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "gzipLevel": "default",
    "out": "cli",
  },
  "opts": {
    "gzipLevel": 9,
    "out": "%s-%v.tgz",
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "color": true,
    "cwd": "\${process.cwd()}",
    "gzipLevel": 9,
    "out": "%s-%v.tgz",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (18) 1`] = `
{
  "command": "create",
  "ancestors": [
    "tag",
    "grease",
  ],
  "args": [
    "3.0.0-alpha.10",
  ],
  "argv": [
    "3.0.0-alpha.10",
  ],
  "optionValueSources": {
    "message": "cli",
    "object": "default",
    "remote": "default",
    "sign": "cli",
    "push": "cli",
  },
  "opts": {
    "message": "release: {tag}",
    "object": "HEAD",
    "remote": "origin",
    "sign": "true",
    "push": true,
  },
  "optsWithGlobals": {
    "config": true,
    "level": "info",
    "tagPrefix": "",
    "write": false,
    "color": true,
    "cwd": "\${process.cwd()}",
    "sort": "-creatordate",
    "message": "release: {tag}",
    "object": "HEAD",
    "remote": "origin",
    "sign": "true",
    "push": true,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (19) 1`] = `
{
  "command": "mlly",
  "ancestors": [],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "debug": "default",
    "version": "cli",
  },
  "opts": {
    "debug": false,
    "version": "1.0.0-alpha.20",
  },
  "optsWithGlobals": {
    "debug": false,
    "version": "1.0.0-alpha.20",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (20) 1`] = `
{
  "command": "resolve",
  "ancestors": [
    "mlly",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "conditions": "default",
    "preserveSymlinks": "default",
    "version": "cli",
  },
  "opts": {
    "conditions": Set {
      "node",
      "import",
    },
    "preserveSymlinks": false,
    "version": "0.0.1",
  },
  "optsWithGlobals": {
    "debug": false,
    "conditions": Set {
      "node",
      "import",
    },
    "preserveSymlinks": false,
    "version": "0.0.1",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (21) 1`] = `
{
  "command": "resolve",
  "ancestors": [
    "mlly",
  ],
  "args": [
    "#internal/tokenize",
  ],
  "argv": [
    "#internal/tokenize",
  ],
  "optionValueSources": {
    "conditions": "default",
    "preserveSymlinks": "default",
  },
  "opts": {
    "conditions": Set {
      "node",
      "import",
    },
    "preserveSymlinks": false,
  },
  "optsWithGlobals": {
    "debug": false,
    "parent": "file://\${process.cwd()}",
    "conditions": Set {
      "node",
      "import",
    },
    "preserveSymlinks": false,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (22) 1`] = `
{
  "command": "resolve",
  "ancestors": [
    "mlly",
  ],
  "args": [
    "#lib/command",
  ],
  "argv": [
    "#lib/command",
  ],
  "optionValueSources": {
    "conditions": "cli",
    "preserveSymlinks": "cli",
  },
  "opts": {
    "conditions": Set {
      "kronk",
      "development",
      "node",
    },
    "preserveSymlinks": true,
  },
  "optsWithGlobals": {
    "debug": false,
    "parent": "file://\${process.cwd()}",
    "conditions": Set {
      "kronk",
      "development",
      "node",
    },
    "preserveSymlinks": true,
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (23) 1`] = `
{
  "command": "smallest-num",
  "ancestors": [],
  "args": [
    Set {
      "0",
      "3",
      "5",
    },
  ],
  "argv": [
    "0",
    "0",
    "3",
    "5",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
}
`;

exports[`functional:lib/Command > parsing > should run command (24) 1`] = `
{
  "command": "join",
  "ancestors": [
    "string-util",
  ],
  "args": [
    "a/z",
  ],
  "argv": [
    "a/z",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "separator": "/",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (25) 1`] = `
{
  "command": "tribonacci",
  "ancestors": [],
  "args": [
    3,
    3,
    9,
  ],
  "argv": [
    "3",
    "3",
    "9",
  ],
  "optionValueSources": {
    "n": "cli",
  },
  "opts": {
    "n": "3",
  },
  "optsWithGlobals": {
    "n": "3",
  },
}
`;
